--- a/public/style.css
+++ b/public/style.css
@@ -160,6 +160,52 @@ body {
   color: #703fe0;                  /* subtle brand accent */
 }
 
+/* Toggle Switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 42px;
+  height: 22px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  background-color: #ccc;
+  border-radius: 30px;
+  transition: 0.25s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: 0.25s;
+}
+
+/* Checked State */
+.switch input:checked + .slider {
+  background-color: #703fe0; /* brand purple */
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
 
 /* ----------------------------------------
    Primary Button
